oc/06-voting/030-Deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-vote-database
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: vote-database
  template:
    metadata:
      labels:
        component: vote-database
        app: voting-app
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: voting-app-database-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-backend
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
        app: voting-app
    spec:
      containers:
        - name: backend
          image: voting-app-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-vote-frontend
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: vote-frontend
  template:
    metadata:
      labels:
        component: vote-frontend
        app: voting-app
    spec:
      containers:
        - name: vote-frontend
          image: voting-app-vote-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-result-frontend
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: result-frontend
  template:
    metadata:
      labels:
        component: result-frontend
        app: voting-app
    spec:
      containers:
        - name: result-frontend
          image: voting-app-result-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-pgadmin
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pgadmin
  template:
    metadata:
      labels:
        component: pgadmin
        app: voting-app
    spec:
      containers:
        - name: pgadmin
          image: ghcr.io/modul-i-ch-109/pgadmin4
          ports:
            - containerPort: 80
