oc/06-voting/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-vote-database
  labels:
    app: voting-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: vote-database
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app-backend
  labels:
    app: voting-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app-vote-frontend
  labels:
    app: voting-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: vote-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app-result-frontend
  labels:
    app: voting-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: result-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app-pgadmin
  labels:
    app: voting-app
spec:
  ports:
    - port: 5050
      targetPort: 80
  selector:
    component: pgadmin
