oc/06-voting/050-Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: voting-app-vote-frontend
  labels:
    app: voting-app
spec:
  to:
    kind: Service
    name: voting-app-vote-frontend
  port:
    targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: voting-app-result-frontend
  labels:
    app: voting-app
spec:
  to:
    kind: Service
    name: voting-app-result-frontend
  port:
    targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: voting-app-pgadmin
  labels:
    app: voting-app
spec:
  to:
    kind: Service
    name: voting-app-pgadmin
  port:
    targetPort: 5050
